Day 4 - security lab and project

--- a/springbootdemo/src/main/resources/application.properties
+++ b/springbootdemo/src/main/resources/application.properties
@@ -12,7 +12,7 @@ message=Default Profile
 server.port=8081
 logging.file.name=logs/app.log
 management.endpoints.web.exposure.include=*
-#management.endpoints.web.base-path=/manage
+management.endpoints.web.base-path=/manage
 management.endpoint.health.show-details=ALWAYS
 
 # Redis configuration
